# owcheminf

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL_WITH_CONDA.md  PHASE1_PHASE2_UPDATE.md  README.md  SECURITY.md  environment-dev.yml  environment.yml  pyproject.toml  setup.cfg
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish-pypi.yml  release.yml
data/1_standardisation/: 2500.csv  caffeine.csv  caffeine2.csv  duplicates.csv  metals.csv  neutralisation.csv  normalisation.csv  parent.csv  reionisation.csv
data/3_duplicates/: 2500.csv
data/5_qsar/: alcohol_data.csv
data/6_reactions/: orange_molecules.tsv  orange_rules_basic.tsv  orange_rules_crosscoupling.tsv  orange_rules_eas.tsv  reactants_200.tsv  reactions_100.tsv
data/7_teaching_workflows/: 01_standardization_smiles.csv  02_diversity_smiles.csv  03_activity_cliffs_vegfr2_ic50.csv  04_qsar_vegfr2_ic50.csv  05_ad_query_vegfr2_ic50.csv  05_ad_reference_vegfr2_ic50.csv  06_mixed_orange_workflows.md  README.md
data/ows_workflow/: .02_diversity_picker.ows.swp.p  .04_qsar_regression.ows.swp.p  01_standardization_and_filtering.ows  02_diversity_picker.ows  03_activity_cliffs-backup.ows  03_activity_cliffs.ows  04_qsar_regression.ows  05_applicability_domain.ows  06_chemical_space_map.ows  07_similarity_clustering.ows  08_outlier_hunting.ows  09_activity_landscape.ows  10_cluster_aware_qsar.ows  11_compound_detail_database_search.ows  12_motif_query_substructure_search.ows  13_multi_motif_hybrid_search.ows  14_mol_editor_smoke_test.ows  15_heterocyclic_fingerprint_teaching.ows  README.md
data/python_code/: build_teaching_workflow_data.py  caffeine.py  cyclic_registry_fairmol.json  cyclic_registry_fairmol.txt  swap_lines.py
docs/: README.md  cyclic_registry_overview.txt  developer.md  optional_dependencies.md  packaging.md  release_process.md  teaching_workflows.md  troubleshooting.md  widget_catalog.md
docs/development/: phase1_phase2_stabilization.md  web_phase_a_backend_backlog.md  web_workflow_migration_plan.md
docs/releases/: v0.2.1-plan.md  v0.2.1-runbook.md
docs/teaching/: README.md
docs/widgets/: README.md  activity_cliff_finder.md  ad_workbench.md  applicability_domain.md  chembl_bioactivity_retriever.md  chembl_browser.md  compound_detail_card.md  cyclic_registry_collision_summary.md  cyclic_registry_fingerprint.md  cyclic_registry_validator.md  descriptor_explorer.md  descriptor_filter.md  diversity_picker.md  drug_filter.md  editors.md  fingerprint_generator.md  isida_descriptors.md  matched_molecular_pairs.md  mlr_model_selection.md  model_explanation.md  mol3d_viewer.md  mol_descriptor.md  mol_standardizer.md  mol_viewer.md  molecule_export_hub.md  molecule_import_hub.md  padel_descriptors.md  pair_viewer.md  pharmafp_search.md  qsar_dataset_builder.md  reactor.md  (+14 more)
scripts/: prepare_release.sh  release_tag.sh
tests/: conftest.py  test_activity_cliff_service.py  test_applicability_domain_service.py  test_audit_trail_viewer.py  test_chembl_bioactivity_dataframe_service.py  test_chembl_bioactivity_service.py  test_chembl_browser_service.py  test_chembl_client.py  test_chembl_output_builder.py  test_chemmol.py  test_clean_repo_cli.py  test_compound_detail_service.py  test_curation_phase25.py  test_cyclic_registry_cli_phase22.py  test_cyclic_registry_fingerprint_phase2.py  test_cyclic_registry_validator_phase21.py  test_descriptor_fingerprints_legacy.py  test_descriptor_preselector_phase34.py  test_descriptor_preselector_phase35.py  test_diversity_service.py  test_drug_filter_service.py  test_fingerprints.py  test_fingerprints_phase1.py  test_from_orange_smoke.py  test_matched_pair_service.py  test_mlr_model_selection_service.py  test_model_explanation_widget.py  test_mol_depict.py  test_mol_sketcher_core.py  test_mol_standardizer.py  test_mol_standardizer_phase1.py  test_mol_standardizer_phase24.py  test_molecule_contract_phase12.py  test_molecule_export_phase32.py  test_molecule_import_phase31.py  test_molecule_qc_modeling_data_phase26.py  test_molecule_qc_phase23_contract.py  test_molecule_qc_phase3.py  test_mordred_descriptor_service.py  test_orange_table_role_pipeline.py  (+35 more)
(+380 files in other folders)
